other-stuff/jenkins-legacy/jenkins-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: jenkins
  annotations:
spec:
  host: jenkins.apps.openshift.redcloud.land
  port:
    targetPort: 8080
  to:
    kind: Service
    name: jenkins
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
